# analisis-numerico-2005

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
models/: __init__.py  base.py  exponential.py  functional_response.py  logistic_delay.py  lotka_volterra.py  predator_prey.py
original/: Metodo.m  din1dep.m  din1dep_f.m  din1indep.m  din1indep_f.m  din2lok.m  din2lok_.m  din2lok_f.m  din2lok_g.m  din2pred.m  din2pred_f.m  din2pred_g.m  din2predlok.m  din2predlok_f.m  din2predlok_g.m
solvers/: __init__.py  adaptive.py  delay.py  euler_backward.py  euler_forward.py  runge_kutta4.py
tests/: test_delay_solver.py  test_models.py  test_solvers.py
visualization/: error_plot.py  phase_plane.py  time_series.py
