[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "analisis-numerico-2005"
version = "1.0.0"
description = "Interactive ODE solver for population dynamics — faithful recreation of a 2005 Matlab university final"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Ale Ayestarán" }]
dependencies = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
